--- a/driver/src/CMakeLists.txt
+++ b/driver/src/CMakeLists.txt
@@ -17,6 +17,7 @@ set(PACKAGE_DB_SQLITE "" CACHE STRING "DB Type for SQLITE")
 set(PACKAGE_DB_DEFAULT_DB "1" CACHE STRING "Default DB Handle")
 option(PACKAGE_DEVELOP "compress package" ON)
 option(PACKAGE_DWLIB "dwlib package" ON)
+option(PACKAGE_EXTERNAL "external package" ON)
 option(PACKAGE_MATH "math package" ON)
 option(PACKAGE_MATRIX "matrix package" ON)
 option(PACKAGE_MUDLIB_STATS "mudlib_stats package" ON)
